tests/sources/valid/var_reassign.minipl
var x: int := 1;
print x;
x := 2;
print x;