tests/sources/invalid/as_numeric_failed.minipl
var x: int := 1;
var y: string := "a";
print x/y;